--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Game</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='Style/main.css'>
+    <script src='Logig/objects.js'></script>
+    <script src='Logig/drawing.js'></script>
+    <script src='Logig/collisionLogig.js'></script>
+    <script src='Logig/game.js'></script>
 </head>
 <body>
-    <a href="game.html"> play</a>
+    <div class="continer">
+        <h1 class="title">Asteroids Game</h1>
+        <canvas class="asteroid" width="350" height="850"></canvas>
+        <canvas id="asteroids" width="850" height="850" tabindex="1"></canvas>
+        <canvas class="ship"  width="350" height="850"></canvas>
+    </div>
 </body>
+<script src='Logig/background.js'></script>
 </html>
